// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Create Test: after list get 1`] = `
Object {
  "currentPage": Object {},
  "dirtyCollections": Object {
    "simpleTestCol": false,
  },
  "doingQuery": Object {
    "undefinedsimpleTestCol{\\"$limit\\":10,\\"$skip\\":0,\\"$sort\\":{\\"createdAt\\":-1}}": true,
  },
  "lists": Object {
    "formModel": Object {
      "data": Array [],
      "limit": 10,
      "skip": 0,
      "total": 0,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "formModel": 0,
  },
  "pageSize": 10,
  "previousQuery": Object {
    "formModel": Object {
      "$limit": 10,
      "$skip": 0,
      "$sort": Object {
        "createdAt": -1,
      },
    },
  },
}
`;

exports[`DbStore Create Test: after login 1`] = `
<div>
  {
  "list": {
    "total": 0,
    "limit": 10,
    "skip": 0,
    "data": []
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 0,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: after second page get 1`] = `
Object {
  "currentPage": Object {
    "formModel": 0,
  },
  "dirtyCollections": Object {
    "simpleTestCol": false,
  },
  "doingQuery": Object {
    "undefinedsimpleTestCol{\\"$limit\\":10,\\"$skip\\":0,\\"$sort\\":{\\"createdAt\\":-1}}": true,
  },
  "lists": Object {
    "formModel": Object {
      "data": Array [],
      "limit": 10,
      "skip": 0,
      "total": 0,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "formModel": 0,
  },
  "pageSize": 10,
  "previousQuery": Object {
    "formModel": Object {
      "$limit": 10,
      "$skip": 0,
      "$sort": Object {
        "createdAt": -1,
      },
    },
  },
}
`;

exports[`DbStore Create Test: after third page get 1`] = `
Object {
  "currentPage": Object {
    "formModel": 0,
  },
  "dirtyCollections": Object {
    "simpleTestCol": false,
  },
  "doingQuery": Object {
    "undefinedsimpleTestCol{\\"$limit\\":10,\\"$skip\\":0,\\"$sort\\":{\\"createdAt\\":-1}}": true,
  },
  "lists": Object {
    "formModel": Object {
      "data": Array [],
      "limit": 10,
      "skip": 0,
      "total": 0,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "formModel": 0,
  },
  "pageSize": 10,
  "previousQuery": Object {
    "formModel": Object {
      "$limit": 10,
      "$skip": 0,
      "$sort": Object {
        "createdAt": -1,
      },
    },
  },
}
`;

exports[`DbStore Create Test: before login 1`] = `
<div>
  {
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: empty result 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "49num",
        "myVal": 20580,
        "id": 49
      },
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": true,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: empty result with defaultVals but not fetched yet 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "49num",
        "myVal": 20580,
        "id": 49
      },
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": true,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: empty result with defaultVals with guaranteed fetch 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "49num",
        "myVal": 20580,
        "id": 49
      },
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": true,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: list after fetch 1`] = `
<div>
  {
  "list": {
    "total": 0,
    "limit": 10,
    "skip": 0,
    "data": []
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 0,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: list before fetch 1`] = `
<div>
  {
  "list": {
    "total": 0,
    "limit": 10,
    "skip": 0,
    "data": []
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 0,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: list on fourth page 1`] = `
<div>
  {
  "list": {
    "total": 0,
    "limit": 10,
    "skip": 0,
    "data": []
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 0,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: prefix after list get 1`] = `
Object {
  "currentPage": Object {
    "formModel": 0,
    "undefined": 0,
  },
  "dirtyCollections": Object {
    "simpleTestCol": false,
  },
  "doingQuery": Object {
    "undefinedsimpleTestCol{\\"$limit\\":10,\\"$skip\\":0,\\"$sort\\":{\\"createdAt\\":-1}}": true,
    "undefinedundefined{\\"$limit\\":10,\\"$skip\\":0,\\"$sort\\":{\\"createdAt\\":-1}}": false,
    "undefinedundefined{\\"$limit\\":10,\\"$skip\\":10,\\"$sort\\":{\\"createdAt\\":-1}}": false,
  },
  "lists": Object {
    "formModel": Object {
      "data": Array [],
      "limit": 10,
      "skip": 0,
      "total": 0,
    },
  },
  "makeQuery": [Function],
  "maxPage": Object {
    "formModel": 0,
  },
  "pageSize": 10,
  "previousQuery": Object {
    "createpref.formModel": Object {
      "$limit": 10,
      "$skip": 0,
      "$sort": Object {
        "createdAt": -1,
      },
    },
    "formModel": Object {
      "$limit": 10,
      "$skip": 0,
      "$sort": Object {
        "createdAt": -1,
      },
    },
  },
}
`;

exports[`DbStore Create Test: prefix list after fetch 1`] = `
<div>
  {
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: prefix list before fetch 1`] = `
<div>
  {
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: prefix second page 1`] = `
<div>
  {
  "currentPage": 0,
  "maxPage": 1,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: prefix still first if prefix unknown but query number 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "49num",
        "myVal": 20580,
        "id": 49
      },
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": true,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: prefix still first if prefix unknown but query set 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "49num",
        "myVal": 20580,
        "id": 49
      },
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "loading": false,
  "currentPage": 0,
  "maxPage": 10,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": true,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: prefix third page 1`] = `
<div>
  {
  "list": {
    "total": 99,
    "limit": 10,
    "skip": 0,
    "data": [
      {
        "guestName": "49num",
        "myVal": 20580,
        "id": 49
      },
      {
        "guestName": "0num",
        "myVal": 0,
        "id": 0
      },
      {
        "guestName": "2num",
        "myVal": 840,
        "id": 2
      },
      {
        "guestName": "3num",
        "myVal": 1260,
        "id": 3
      },
      {
        "guestName": "4num",
        "myVal": 1680,
        "id": 4
      },
      {
        "guestName": "5num",
        "myVal": 2100,
        "id": 5
      },
      {
        "guestName": "6num",
        "myVal": 2520,
        "id": 6
      },
      {
        "guestName": "7num",
        "myVal": 2940,
        "id": 7
      },
      {
        "guestName": "8num",
        "myVal": 3360,
        "id": 8
      },
      {
        "guestName": "9num",
        "myVal": 3780,
        "id": 9
      }
    ]
  },
  "currentPage": 0,
  "maxPage": 10,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": true,
  "showPrevPage": false
}
</div>
`;

exports[`DbStore Create Test: using prevPage back to third page 1`] = `
<div>
  {
  "list": {
    "total": 0,
    "limit": 10,
    "skip": 0,
    "data": []
  },
  "loading": true,
  "currentPage": 0,
  "maxPage": 0,
  "queryData": {
    "$sort": {
      "createdAt": -1
    }
  },
  "showNextPage": false,
  "showPrevPage": false
}
</div>
`;
